# Cpp-Multithread

./: CMakeLists.txt  README.md
src/: compile_commands.json  mthread.cpp  openMP.cpp
